# 3dpp

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
lib/: obj_loader.cpp
res/: shader.frag  shader.vert  shaderBasic.glfs  shaderBasic.glvs
src/: camera.cpp  camera.h  display.cpp  display.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h
